# Sistema-Ejecutivo

behavior_coordinator_process/: CMakeLists.txt  README.md
behavior_coordinator_process/launch/: behavior_coordinator_process.launch
behavior_coordinator_process/src/include/: argument_descriptor.h  behavior_activation_changes.h  behavior_catalog.h  behavior_coordinator_process.h  behavior_descriptor.h
behavior_coordinator_process/src/source/: argument_descriptor.cpp  behavior_activation_changes.cpp  behavior_catalog.cpp  behavior_coordinator_process.cpp  behavior_coordinator_process_main.cpp  behavior_descriptor.cpp
behavior_coordinator_process/src/test/: behavior_coordinator_process_test.cpp
behavior_systems/basic_quadrotor_behaviors/: CMakeLists.txt  basic_quadrotor_behaviors.xml
behavior_systems/basic_quadrotor_behaviors/launch/: basic_quadrotor_behaviors.launch
behavior_systems/basic_quadrotor_behaviors/src/include/: behavior_land.h  behavior_localize_with_odometry.h  behavior_self_localize_with_odometry_1.h  behavior_take_off.h  behavior_wait.h
behavior_systems/basic_quadrotor_behaviors/src/source/: behavior_land.cpp  behavior_localize_with_odometry.cpp  behavior_self_localize_with_odometry_1.cpp  behavior_take_off.cpp  behavior_wait.cpp
behavior_systems/quadrotor_motion_with_pid_control/: CMakeLists.txt  quadrotor_motion_with_pid_control.xml
behavior_systems/quadrotor_motion_with_pid_control/launch/: quadrotor_motion_with_pid_control.launch
behavior_systems/quadrotor_motion_with_pid_control/src/include/: behavior_follow_path.h  behavior_keep_hovering_with_pid_control.h  behavior_keep_moving_with_pid_control.h  behavior_rotate_with_pid_control.h
behavior_systems/quadrotor_motion_with_pid_control/src/source/: behavior_follow_path.cpp  behavior_keep_hovering_with_pid_control.cpp  behavior_keep_moving_with_pid_control.cpp  behavior_rotate_with_pid_control.cpp
behaviors/behavior_inform_operator/: CMakeLists.txt  README.md
behaviors/behavior_inform_operator/launch/: behavior_inform_operator.launch
behaviors/behavior_inform_operator/src/controller/include/: behavior_inform_operator.h  inform_operator_widget.h
behaviors/behavior_inform_operator/src/controller/source/: behavior_inform_operator.cpp  behavior_inform_operator_main.cpp  inform_operator_widget.cpp
behaviors/behavior_request_operator_assistance/: CMakeLists.txt  README.md
behaviors/behavior_request_operator_assistance/launch/: behavior_request_operator_assistance.launch
behaviors/behavior_request_operator_assistance/src/controller/include/: behavior_request_operator_assistance.h  operator_assistance_widget.h
behaviors/behavior_request_operator_assistance/src/controller/source/: behavior_request_operator_assistance.cpp  behavior_request_operator_assistance_main.cpp  operator_assistance_widget.cpp
